<resources>
    <string name="app_name">Mess Manager</string>
    <string name="messName">CUB Bachelors</string>
    <string name="totalDepositTxt">Total Deposit</string>
    <string name="totalDepositAmount">0.00</string>
    <string name="messTotalMealTxt">Mess Total Meal</string>
    <string name="messTotalMealAmount">0.00</string>
    <string name="messTotalMealCostTxt">Mess Total Meal Cost</string>
    <string name="messTotalMealCostAmount">0.00</string>
    <string name="messMealRateTxt">Mess Meal Rate</string>
    <string name="messMealRateAmount">0.00</string>
    <string name="messBalanceTxt">Mess Meal Rate</string>
    <string name="messBalanceAmount">0.00</string>
    <string name="personalDetails">Personal Details</string>
    <string name="myMealTxt">My Meal</string>
    <string name="myMealAmount">0.00</string>
    <string name="myDepositTxt">My Deposit</string>
    <string name="myDepositAmount">0.00</string>
    <string name="myCostTxt">My Cost</string>
    <string name="myCostAmount">0.00</string>
    <string name="myBalanceTxt">Balance</string>
    <string name="myBalanceAmount">0.00</string>
    <string name="bazaarList">Bazaar List</string>
    <string name="memberSummary">All Member Summary</string>
    <string name="member1">Nahid Ruhan</string>
    <string name="totalMealTxt">Total Meal</string>
    <string name="totalMealAmount">0.00</string>
    <string name="mealCostTxt">Meal Cost</string>
    <string name="mealCostAmount">0.00</string>
    <string name="depositTxt">Deposit</string>
    <string name="depositAmount">0.00</string>
    <string name="balanceTxt">Balance</string>
    <string name="balanceAmount">0.00</string>
    <string name="member2">Tanvir Ahmed</string>
    <string name="totalMealAmount2">0.00</string>
    <string name="mealCostAmount2">0.00</string>
    <string name="depositAmount2">0.00</string>
    <string name="balanceAmount2">0.00</string>
    <string name="member3">Stanly Haldar</string>
    <string name="totalMealAmount3">0.00</string>
    <string name="mealCostAmount3">0.00</string>
    <string name="depositAmount3">0.00</string>
    <string name="balanceAmount3">0.00</string>
    <string name="add">Add</string>
    <string name="meal">Meal</string>
    <string name="zero">0</string>
    <string name="hint">hint</string>
    <string name="submit">Submit</string>
    <string name="remove">Remove Values</string>
</resources>